force-app/main/default/objects/Memberships__c/fields/Active_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Active_Account_Name__c</fullName>
    <description>Stores the account name snapshot; used for reporting and quick reference without additional lookup for using this in email notification.</description>
    <label>Active Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>