force-app/main/default/objects/Memberships__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <description>A unique identifier for the individual within the system.</description>
    <label>Application Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>