force-app/main/default/objects/Memberships__c/fields/BatchNumber__c.field-meta.xml
<CustomField>
    <fullName>BatchNumber__c</fullName>
    <description>The identification number for a specific batch of transactions.</description>
    <label>Batch Number</label>
    <type>TextArea</type>
</CustomField>