force-app/main/default/objects/Memberships__c/fields/CouponCode__c.field-meta.xml
<CustomField>
    <fullName>CouponCode__c</fullName>
    <description>The code used for applying a discount or promotion.</description>
    <label>Coupon code</label>
    <type>TextArea</type>
</CustomField>