force-app/main/default/objects/Memberships__c/fields/CP_Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>CP_Tender_Type__c</fullName>
    <label>CP Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid by CP Check</fullName>
            </value>
            <value>
                <fullName>Paid by CP ACH</fullName>
            </value>
            <value>
                <fullName>Paid by CP Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>