force-app/main/default/objects/Memberships__c/fields/Ct__c.field-meta.xml
<CustomField>
    <fullName>Ct__c</fullName>
    <description>Abbreviation commonly used for &quot;Count&quot; or other context-specific purposes.</description>
    <label>Ct</label>
    <type>TextArea</type>
</CustomField>