force-app/main/default/objects/Memberships__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores a description or category about membership details.</description>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main St State Coordinator Pkg</fullName>
            </value>
            <value>
                <fullName>Designated Paid by CP non-def</fullName>
            </value>
            <value>
                <fullName>Allied Mbrs General Join/Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>