force-app/main/default/objects/Memberships__c/fields/DirectoryOptinStatus__c.field-meta.xml
<CustomField>
    <fullName>DirectoryOptinStatus__c</fullName>
    <description>Indicates if the individual&apos;s information is included in the membership directory.</description>
    <label>Directory Opt-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opted In</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
            <value>
                <fullName>Automatically Opted In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>