force-app/main/default/objects/Memberships__c/fields/DonorCoveredFees__c.field-meta.xml
<CustomField>
    <fullName>DonorCoveredFees__c</fullName>
    <description>The amount of fees covered by the donor.</description>
    <label>Donor Covered Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>