force-app/main/default/objects/Memberships__c/fields/Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Id__c</fullName>
    <description>Stores auto-generated enrollment id; used for integration and tracking.</description>
    <label>Enrollment Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>