force-app/main/default/objects/Memberships__c/fields/Gift_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Gift_Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field linking to soft credit information related to the gift.</description>
    <label>Gift Soft Credit</label>
    <referenceTo>GiftSoftCredit</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>