force-app/main/default/objects/Memberships__c/fields/GL__c.field-meta.xml
<CustomField>
    <fullName>GL__c</fullName>
    <description>General Ledger Number associated with an accounting entry.</description>
    <label>GL</label>
    <type>TextArea</type>
</CustomField>