force-app/main/default/objects/Memberships__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the membership is currently active; used to control access to benefits and services. based on this we are showing membership on account</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>