force-app/main/default/objects/Memberships__c/fields/Manual_Membership__c.field-meta.xml
<CustomField>
    <fullName>Manual_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to indicate whether it is a manual membership or not</description>
    <label>Manual Membership</label>
    <type>Checkbox</type>
</CustomField>