force-app/main/default/objects/Memberships__c/fields/Membership_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Membership_Account_Id__c</fullName>
    <description>Stores system-specific account id that is related to their account of membership.</description>
    <label>Membership Account Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>