force-app/main/default/objects/Memberships__c/fields/Membership_Activation_Link__c.field-meta.xml
<CustomField>
    <fullName>Membership_Activation_Link__c</fullName>
    <description>Stores activation link for membership and account; used in onboarding and user activation processes on frontend portal.</description>
    <label>Membership Activation Link</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>