force-app/main/default/objects/Memberships__c/fields/Membership_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Change_Type__c</fullName>
    <description>Tracks the change type of membership change (e.g., upgrade, downgrade, no change); either this membership is upgraded or downgraded.</description>
    <label>Membership Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Downgraded</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>