force-app/main/default/objects/Memberships__c/fields/Membership_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Enrollment_Date__c</fullName>
    <description>Stores the date when membership enrollment occurred; used as lifecycle starting point.(stores NEON data only)</description>
    <label>Membership Enrollment Date</label>
    <type>Date</type>
</CustomField>