force-app/main/default/objects/Memberships__c/fields/NonDeductibleAmountDescription__c.field-meta.xml
<CustomField>
    <fullName>NonDeductibleAmountDescription__c</fullName>
    <description>The detailed description of why a portion of the membership fee is not tax-deductible.</description>
    <label>Non Deductible Amount Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>