force-app/main/default/objects/Memberships__c/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <label>Notification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day 1 Sent</fullName>
            </value>
            <value>
                <fullName>Day 30 Sent</fullName>
            </value>
            <value>
                <fullName>Day 60 Sent</fullName>
            </value>
            <value>
                <fullName>Day 90 Sent</fullName>
            </value>
            <value>
                <fullName>Termination Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>