force-app/main/default/objects/Memberships__c/fields/Online_Membership__c.field-meta.xml
<CustomField>
    <fullName>Online_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field denotes whether the membership is applied through online form or not</description>
    <label>Online Membership</label>
    <type>Checkbox</type>
</CustomField>