force-app/main/default/objects/Memberships__c/fields/OriginCategory__c.field-meta.xml
<CustomField>
    <fullName>OriginCategory__c</fullName>
    <description>Stores the initial category or classification of the membership record; when membership is created in system.</description>
    <label>Origin Category</label>
    <type>TextArea</type>
</CustomField>