force-app/main/default/objects/Memberships__c/fields/OriginDetail__c.field-meta.xml
<CustomField>
    <fullName>OriginDetail__c</fullName>
    <description>Stores detailed origin/source information.(stores NEON data only)</description>
    <label>Origin Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>