force-app/main/default/objects/Memberships__c/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <description>Stores the date when payment was received; used for financial reconciliation.</description>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>