force-app/main/default/objects/Memberships__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to a related account; used in relationships like parent, payer or secondary association.</description>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Memberships (Related Account)</relationshipLabel>
    <relationshipName>Memberships1</relationshipName>
    <type>Lookup</type>
</CustomField>