force-app/main/default/objects/Memberships__c/fields/Related_Account_Billing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Billing_State_Province__c</fullName>
    <description>Stores derived billing state/province of related account; used for regional segmentation and reporting.</description>
    <formula>Related_Account__r.BillingState</formula>
    <label>Related Account Billing State/Province</label>
    <type>Text</type>
</CustomField>