force-app/main/default/objects/Memberships__c/fields/Renewal_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a renewal reminder should be sent; used in automation workflows.</description>
    <label>Renewal Reminder</label>
    <type>Checkbox</type>
</CustomField>