force-app/main/default/objects/Memberships__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The origin or means by which the individual’s information or transaction was obtained.</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>