force-app/main/default/objects/Memberships__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stores the current transaction or payment status; used for financial tracking.(stores NEON data only)</description>
    <label>Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUCCEEDED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>REFUNDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>