force-app/main/default/objects/Memberships__c/fields/TaxDeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxDeductibleAmount__c</fullName>
    <description>Stores the tax-deductible portion of the fee.(stores NEON data only)</description>
    <label>Tax Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>