force-app/main/default/objects/Memberships__c/fields/TermEndDate__c.field-meta.xml
<CustomField>
    <fullName>TermEndDate__c</fullName>
    <description>Stores the date when the membership term ends; used for expiration and renewal tracking.</description>
    <label>Term End Date</label>
    <type>Date</type>
</CustomField>