force-app/main/default/objects/Memberships__c/fields/TermStartDate__c.field-meta.xml
<CustomField>
    <fullName>TermStartDate__c</fullName>
    <description>Stores the date when the membership term begins; used to determine active period.</description>
    <label>Term Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>