force-app/main/default/objects/Memberships__c/fields/TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDate__c</fullName>
    <description>Stores the date of the transaction; used for accounting and reporting.</description>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>