force-app/main/default/objects/Memberships__c/validationRules/Membership_Status_and_End_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Membership_Status_and_End_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL( Membership_Status__c , &quot;Expired&quot;),
        ISPICKVAL( Membership_Status__c , &quot;In Grace Period&quot;)
    ),
    OR(
        ISBLANK( TermEndDate__c ),
         TermEndDate__c &gt;= TODAY()
    )
)</errorConditionFormula>
    <errorMessage>The membership status cannot be set to &quot;Expired&quot; or &quot;In Grace Period&quot; because the Term End Date is still active, and the membership is currently in an active stage.</errorMessage>
</ValidationRule>