force-app/main/default/objects/Memberships__c/listViews/All_Memberships.listView-meta.xml
<ListView>
    <fullName>All_Memberships</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Membership_Status__c</columns>
    <columns>Membership_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Memberships</label>
</ListView>